<resources>
    <string name="app_name">MommysMunchies</string>
    <string name="API_KEY">AIzaSyCnDceor24zNHmbLDfU8XfO5gq9ZRRg_3o</string>
    <string name="mommy_s_munchies">Mommy\'s Munchies</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="or">OR</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="instagram">Instagram</string>
    <string name="bgcolor">bgcolor</string>
    <string name="username">Username</string>
    <string name="login_string">Already have an account?<b>Login Here</b></string>
    <string name="done">Done</string>
    <string name="backbtn">backbtn</string>
    <string name="home">Home</string>
    <string name="saved_places">Saved Places</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="amy_gmail_com">amy@gmail.com</string>
    <string name="amy">Amy</string>

    <string name="open_navigation_drawer">Open Drawer</string>
    <string name="close_navigation_drawer">Open Drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="saved_places_fragment">Saved Places Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="verify_email">Verify Email</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="search_place">Search Place</string>
    <string name="default_s">Default</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
</resources>
